# MyTokens

./: .gitignore  AGENTS.md  BUILD_MAC.md  DISTRIBUTION.md  DMG_BUILD_GUIDE.md  DMG_QUICK_START.md  README.md  SETUP_MAC.md  build-dmg.sh  build-mac.sh  design.md  index.html  mykey 产品文档.md  package-lock.json  package.json  test_codex_api.py  tsconfig.tests.json  vite.config.ts
.github/workflows/: deploy-gateway.yml
buyer-dashboard/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
buyer-dashboard/src/: App.tsx  DashboardRoot.tsx  api.ts  chatHelpers.ts  dashboardViewModel.ts  main.tsx  redpacketRewards.ts  styles.css  token-ui.tsx  types.ts  vite-env.d.ts  wallet.ts
buyer-dashboard/src/components/: ApiKeys.tsx  Channels.tsx  ChatPlayground.tsx  Credits.tsx  Docs.tsx  ModelQuality.tsx  Overview.tsx  PasskeyLock.tsx  RedpacketClaim.tsx  Topup.tsx  Usage.tsx  WalletButton.tsx  WelcomeClaim.tsx
buyer-dashboard/tests/: api.test.ts  appState.test.ts  chatLayout.test.ts  dashboard.test.ts  redpacket-rewards.test.ts  styleContrast.test.ts
cloud-gateway/: .dev.vars.example  .gitignore  DEPLOY.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vitest.config.ts  wrangler.toml
cloud-gateway/migrations/: 0001_compute_gateway.sql  0002_onchain_topups.sql  0003_redpackets.sql  0004_operators.sql  0005_operator_scoping.sql  0006_treasury.sql  0007_stablecoin_faucet_claims.sql
cloud-gateway/scripts/: bootstrap.mjs  gen-secrets.mjs
cloud-gateway/src/: admin-ip.ts  audit.ts  errors.ts  index.ts  types.ts
cloud-gateway/src/auth/: api-keys.ts
cloud-gateway/src/billing/: account-actor.ts  account-do-class.ts  account-do.ts  cloudflare-types.ts  do-account-actor.ts  pricing.ts  reservations.ts
cloud-gateway/src/db/: schema.ts  store.ts
cloud-gateway/src/providers/: adapter.ts  anthropic.ts  openai.ts
cloud-gateway/src/quality/: model-quality.ts
cloud-gateway/src/queue/: consumer.ts
cloud-gateway/src/routes/: admin.ts  dashboard.ts  openai.ts  operator-auth.ts  relay.ts  relayer.ts  topup.ts
cloud-gateway/src/routing/: router.ts  rules.ts
cloud-gateway/src/vault/: envelope.ts  provider-tokens.ts
cloud-gateway/static/: admin.html  index.html
cloud-gateway/static/assets/: ccip-C3D-g_YQ.js  ccip-pIjancYj.js  index-BJ-oqnsH.css  index-C5RKiZDy.js  index-CJmdPcEO.css  index-DHdd8ONE.js
cloud-gateway/tests/: account-do-billing.test.ts  account-do-class.test.ts  admin-audit.test.ts  admin-ip-allowlist.test.ts  admin-observability.test.ts  api-key-auth.test.ts  buy-myc.test.ts  credit-requests.test.ts  dashboard-api.test.ts  dashboard-self-service.test.ts  do-account-actor.test.ts  model-quality.test.ts  operator-happy-path.test.ts  operator-isolation.test.ts  operator-tenancy.test.ts  operator-write.test.ts  pricing.test.ts  provider-token-vault.test.ts  rate-limit.test.ts  redpacket-claim.test.ts  relay-anthropic.test.ts  relay-openai-stream.test.ts  relay-openai.test.ts  reservation-alarm.test.ts  routing.test.ts  treasury.test.ts  worker-routes.test.ts
cloud-gateway/tests-workers/: account-do.workerd.test.ts  tsconfig.json
cloudflare/passkey-aasa/: wrangler.toml
cloudflare/passkey-aasa/src/: worker.mjs
cloudflare/passkey-aasa/test/: worker.test.mjs
contracts/: foundry.toml
contracts/script/: deploy-stablecoin.sh
contracts/src/: MockStablecoin.sol  MyKeyComputeCredit.sol
contracts/test/: MockStablecoin.t.sol  TransferWithSig.t.sol
docs/: compute-gateway-operator-runbook.md
docs/superpowers/plans/: 2026-05-18-crypto-wallet-completion.md  2026-05-19-compute-credit-gateway.md  2026-05-20-v1-finishing.md  2026-05-21-multi-tenant-gateway.md
scripts/: tcx-keygen.mjs  test-codex-gateway.mjs
skills/mykey/: SKILL.md
src/: App.css  App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: biometric_keychain.rs  commands.rs  gateway.rs  lib.rs  operator_key.rs  passkey_native.rs  provider_defaults.rs  vault.rs  vault_crypto.rs
src-tauri/src/secret_store/: config.rs  manager.rs  mod.rs  provider.rs
src-tauri/src/secret_store/providers/: keyring.rs  memory.rs  mod.rs  sqlite.rs
src-tauri/src/stt/: elevenlabs.rs  mod.rs
src-tauri/src/usage/: cli.rs  mod.rs  monitor.rs
src-tauri/src/voice_input/: audio.rs  mod.rs
src-tauri/tests/: vault_crypto.rs
src/components/: ApplicationManager.css  ApplicationManager.tsx  ClippyAssistant.css  ClippyAssistant.tsx  ComputeGatewayManager.css  ComputeGatewayManager.tsx  CryptoWalletManager.css  CryptoWalletManager.tsx  GlobalSettings.css  GlobalSettings.tsx  ImportModal.css  ImportModal.tsx  KeyForm.css  KeyForm.tsx  KeyList.css  KeyList.tsx  OpencodeMcpManager.tsx  OpencodeSkillManager.tsx  OpencodeToolsManager.css  PaceProgressBar.tsx  ProjectManager.css  ProjectManager.tsx  PromptManager.css  PromptManager.tsx  ProviderManager.css  ProviderManager.tsx  QuickResultPanel.css  QuickResultPanel.tsx  UsageCard.tsx  UsageDashboard.css  UsageDashboard.tsx  VoiceInputController.tsx  VoiceOverlay.css  VoiceOverlay.tsx
src/types/: app.ts  compute.ts  project.ts  provider.ts  settings.ts  usage.ts
src/utils/: alchemyRpc.ts  assetVault.ts  clippyModelTesting.ts  computeGateway.ts  cryptoPortfolio.ts  cryptoTransactions.ts  cryptoWalletCache.ts  homeNavigation.ts  linkage.ts  oklinkApi.ts  passkeyNative.ts  passkeyPrf.ts  project.ts  provider.ts  qrCode.ts  tcxWallet.ts  usage.ts  vaultUnlock.ts  wavRecorder.ts
tests/: alchemyRpc.test.ts  assetVault.test.ts  clippyModelTesting.test.ts  computeGateway.test.ts  computeGatewayManager.test.ts  cryptoPortfolio.test.ts  cryptoTransactions.test.ts  cryptoWalletCache.test.ts  desktopPackaging.test.ts  homeNavigation.test.ts  linkage.test.cjs  oklinkApi.test.ts  vaultUnlock.test.ts
