[package]
name = "app"
version = "0.1.0"
description = "MyKey - AI Asset Vault"
authors = ["MyKey Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
json5 = "0.4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
md5 = "0.7"
walkdir = "2"
dirs = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
keyring = "2.3"
toml = "0.8"
shellexpand = "3.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
tauri-plugin-dialog = "2.6.0"
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1", features = ["net", "sync"] }
